2012-08-06  Hans Rakers <hans at rakers.org>

	* Fixed memory leaks in restore_hash() and the optimizer
	* Fixed several issues in the optimizer related to result type
	  checking / setting (PHP 5.4 uses op.result_type for both result
	  type and 'result used mask' instead of two seperate values)
	* Fixed displaying of function/method names in the disassembler
	* Fixed handling of fetch ops by the optimizer and the disassembler

2012-07-30  Hans Rakers <hans at rakers.org>

	* Fixed open_basedir issues as reported on the old Trac site
	* Removed key/value store and session handler bits from config.w32
	  and added doc-comment-inclusion. Win32 project files also need
	  updating but i currently don't have a win32 development station
	* Fixed segfault in store_default_property_access_check when
	  compiled with -O2 and removed unused vars
	* Fixed a very stupid bug in restore_class_parent
	* Rewrote the spinlock implementation. This hopefully takes care of
	  deadlock issues reported on the old Trac site.
	* Removed some excessive debug output

2012-07-26  Hans Rakers <hans at rakers.org>

	* fixed compilation of ea_dasm.c against php < 5.4
	* fixed handling of hashes for php < 5.4
	* disabled MM_CHECK by default because it is broken and causes segfaults when
	  shared memory is exhausted (debug builds only).

2012-07-19  Hans Rakers <hans at rakers.org>

	* PHP-5.4 compatibility
	* Fixed a segfault when restoring class doc comments from
	  disk cache
	* Storing doc comments in cache is default now since most
	  frameworks require this (Reflection API).
	* Re-indented all files using astyle and bumped year

2010-07-28  Bart Vanbrabant <bart at vanbrabant.eu>

	* Make the error message about creating the cache directory more
	  clear.

2010-07-26  Hans Rakers <hans at react.nl>

	* Fix for ticket #432. The optimizer would eliminate the final
	  ZEND_RETURN of an op array if the script ended with a switch
	  statement. Last opcodes ZEND_BRK, ZEND_JMP, ZEND_JMP,